--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,6 @@ Flasky base.
 {% endblock %}
 
 
-
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
@@ -40,4 +39,9 @@ Flasky base.
 <div class="container">
     {% block page_content %}{% endblock %}
 </div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
 {% endblock %}
