--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
 <div class="page-header">
     <h1>Hello World!</h1>
 </div>
+<img src="http://helloflask.com/totoro.gif">
+
 <p>The Page run time is {{ moment(current_time).format('LLL') }}.</p>
 <p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
 {% endblock %}
